--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,6 +1,8 @@
 [main]
-font=JetBrainsMonoNerd Font:size=12
-box-drawings-uses-font-glyphs=yes
+include=/home/gobbls/Github/dotfiles/foot/kanagawa
+#font=JetBrainsMonoNerd Font:size=12
+font=FiraCode Nerd Font:size=12
+box-drawings-uses-font-glyphs=no
 
 [scrollback]
 lines=10000
