--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,8 +1,11 @@
 [main]
-include=/home/gobbls/Github/dotfiles/foot/kanagawa
+include=/home/gobbls/dotfiles/foot/kanagawa
 #font=JetBrainsMonoNerd Font:size=12
-font=FiraCode Nerd Font:size=12
+font=FiraCode Nerd Font:size=14.5
 box-drawings-uses-font-glyphs=no
+pad=10x10
+# fixes ssh into pi not liking foot as terminal
+term=kitty
 
 [scrollback]
 lines=10000
@@ -17,3 +20,4 @@ hide-when-typing=yes
 
 [colors]
 background=000000
+alpha=0.7
